--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <!--end of the hero section-->
       <section>
       <div class="container bg-gradient-to-bl from-blue-700 to-fuchsia-600">
-    <div class ="flex justify-center items-center gap-20  pt-10 ">
+    <div class =flex justify-center items-center gap-20  pt-10 ">
       <img class="" src="assets/spotify.png" alt="spotify"/>
       <img src="assets/amazon.png" alt="Amazon"/>
       <img src="assets/spotify.png" alt="spotify"/>
@@ -415,7 +415,7 @@
            <div class="flex justify-center py-12 relative" >
             <img class="h-130 w-240 " src="assets/womencenter.png" alt="Woman"/>
         
-            <img class="absolute left-158 top-58 h-35 w-40 " src="assets/play.svg" alt="Play"/>
+            <img class="absolute sm:left-0  md:left-0 lg:left-158 top-58 h-35 w-40 " src="assets/play.svg" alt="Play"/>
               <img class="absolute h-50 w-70 left-246 top-95" src="assets/banner_right.png.png" alt="Banner Right"/>
             </div>
            
@@ -427,7 +427,7 @@
     <h2 class="text-2xl font-semibold text-course-blu mb-2">Testimonials</h2>
     <p class="text-gray-500 mb-10">What our students say about us</p>
 
-    <div class=" relative grid grid-cols-1 md:grid-cols-3 gap-8 px-15 mt-20 mb-20">
+    <div class=" relative grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 px-15 mt-20 mb-20">
       <!-- Testimonial 1 -->
       <div class="bg-white relative top-10 w-98 top p-6 shadow-lg ">
         <img class="absolute bottom-30 left-45" src="assets/testimonials.svg"/> 
