--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     >
       <div class="flex flex-col-reverse lg:flex-row item-center">
         <!-- left side -->
-        <div class="flex flex-1 flex-col items-center lg:items-start pl-15">
+        <div class="container flex flex-1 flex-col items-center lg:items-start pl-15">
           <p class="text-course-white">Successful coaches are visionaries</p>
           <h1
             class="text-course-white md:text-3xl lg:text-4xl text-center lg:text-left mb-6"
@@ -402,7 +402,7 @@
  <div>  
    <form class=" relative mt-10 ml-10 flex justify-center items-center">
               <input type="text" class= " w-110 bg-white/20 border border-none text-white placeholder-white/80 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-300" placeholder="Enter your email" />
-              <button class="absolute right-60 w-35  bg-blue-600 text-white px-6 py-2 rounded-r  hover:bg-blue-700 transition">Subscribe</button>
+              <button class="absolute flex justify-center flex-wrap w-35  bg-blue-600 text-white px-6 py-2 rounded-r  hover:bg-blue-700 transition">Subscribe</button>
             </form>
       </div>     
           </div>
